--- a/app/views/book_comments/_index.html.erb
+++ b/app/views/book_comments/_index.html.erb
@@ -13,7 +13,7 @@
             </td>
             <td>
               <% if book_comment.user == current_user %>
-                <%= link_to "Destroy", book_book_comment_path(book_comment, book_comment), method: :delete, class: "btn btn-danger" %>
+                <%= link_to "Destroy", book_book_comment_path(book_comment, book_comment), method: :delete, class: "btn btn-danger", remote: true %>
               <% end %>
             </td>
           </tr>
