--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,11 +17,11 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <td>
-            <%= render 'favorites/favorite', book: @book %>
+          <td class =<%= "favorite-" + @book.id.to_s %>>
+            <%= render 'favorites/btn', book: @book %>
           </td>
-          <td>
-            コメント数:<%= @book.book_comments.count %>
+          <td class="book-comments-counter">
+            <%= render "book_comments/counter", book: @book %>
           </td>
           <% if @user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
@@ -29,8 +29,12 @@
           <% end %>
         </tr>
       </table>
-      <%= render 'book_comments/index', book: @book %>
-      <%= render 'book_comments/form', book: @book, book_comment: @book_comment %>
+      <div class ="book-comments-index">
+        <%= render 'book_comments/index', book: @book %>
+      </div>
+      <div class ="book-comments-form">
+        <%= render 'book_comments/form', book: @book, book_comment: @book_comment %>
+      </div>
     </div>
   </div>
 </div>
