--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
+    <% if user_signed_in? %>
+　　  <%= render 'tagsearches/tagsearch' %>
+    <% end %>
       <main>
         <p id="notice"><%= notice %></p>
         <div class="d-flex justify-content-center mb-2">
